--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -1,9 +1,9 @@
 ﻿{
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "Domain": "<domain-name>.onmicrosoft.com",
-    "TenantId": "<TenantID-GUID>",
-    "ClientId": "<ClientID-GUID>",
+    "Domain": "<WebApp-OpenIDConnect-DotNet>.onmicrosoft.com",
+    "TenantId": "<295ce83c-2bb1-417d-ae0e-24a7ba5f37e7 >",
+    "ClientId": "<c6a0ccdf-a625-46ae-bafb-a3d4b7a7ffd9>",
     "CallbackPath": "/signin-oidc"
   },
   "Logging": {
